5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1758_2390.log
== SUBMITION (2019-05-29 21:28:26) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))
a=max
i=0
mes=1
while(v[1]=!max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- EXECUTION TIME:
0.143899
-- ERROR:
  File "/home/codebench/codes/1758/2390/main.py", line 7
    while(v[1]=!max(v1)):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:28:56) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))
a=max
i=0
mes=1
while(v[1]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:29:09) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))
a=max
i=0
mes=1
while(v[1]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- EXECUTION TIME:
0.436921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 7, in <module>
    while(v[1]!=max(v1)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:30:00) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))

a=max
i=0
mes=1
while(v[1]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- EXECUTION TIME:
0.36875
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 8, in <module>
    while(v[1]!=max(v1)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:31:13) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))

a=max(v1)
i=0
mes=1
while(v[1]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- EXECUTION TIME:
0.599622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 8, in <module>
    while(v[1]!=max(v1)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 21:31:57) 
-- CODE:
from numpy import*
v1=array(eval(input(" digite 12 meses: ")))
v2=array(eval(input("faltantes: ")))

a=max(v1)
i=0
mes=1
while(v1[i]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
-- EXECUTION TIME:
0.540994
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
